Fix button gap

--- a/themes/jeo-theme/assets/scss/6-widgets/_w-newsletter.scss
+++ b/themes/jeo-theme/assets/scss/6-widgets/_w-newsletter.scss
@@ -97,6 +97,7 @@
 
                     @include tablet {
                         width: 77px;
+                        height: 100%;
 
                         span:first-child {
                             display: none;
